--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,13 @@ body {
   background-color: rgb(234, 228, 208, 0.8);
 }
 
+.list-image {
+      display: none; /* Hidden by default */
+      margin-top: 10px;
+      max-width: 100%;
+      border-radius: 8px;
+    }
+
 @media (min-width: 768px) {
    /* tablets and desktop */
    .image {
